--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,7 +64,10 @@ flutter:
     - images/Elon.jpg
     - images/laskarPelangi.jpg
     - images/StudentHidjo.jpg
+    - images/conan.jpeg
     - images/Rudy.jpg
+    - images/dilan.jpg
+    - images/erere.jpeg
 
 
 
